# sample-amazon-quick-suite-knowledge-hub

./: README.md  mkdocs.yml
docs/use-cases/compliance-assistant-mcp/: .gitignore  README.md  pyproject.toml
docs/use-cases/compliance-assistant-mcp/cdk/: app.py  cdk.json  compliance_assistant_stack.py
docs/use-cases/compliance-assistant-mcp/knowledge/: user_preference.txt
docs/use-cases/compliance-assistant-mcp/runtime/: agent.py  handler.py  requirements.txt
docs/use-cases/compliance-assistant-mcp/scripts/: create_bedrock_agent.py
docs/use-cases/compliance-assistant-mcp/src/compliance_assistant/: crew.py  main.py
docs/use-cases/document-generation-mcp-agentcore-runtime/: .gitignore  README.md  USER_GUIDE.md  requirements.txt
docs/use-cases/salesforce-chat-embed/: README.md
docs/use-cases/sharepoint-list-to-quicksight-dataset/: .gitignore  README.md
docs/use-cases/sharepoint-list-to-quicksight-dataset/backend/: Makefile  pyproject.toml
docs/use-cases/sharepoint-list-to-quicksight-dataset/backend/src/: __init__.py  api_handler.py  requirements.txt
docs/use-cases/sharepoint-list-to-quicksight-dataset/backend/src/activities/: activity_utils.py  export_list_activity.py  list_lists_activity.py  search_sites_activity.py
docs/use-cases/sharepoint-list-to-quicksight-dataset/backend/src/common/: env.py  exceptions.py  models.py  observability.py
docs/use-cases/sharepoint-list-to-quicksight-dataset/backend/src/common/dao/: s3_dao.py
docs/use-cases/sharepoint-list-to-quicksight-dataset/backend/src/common/services/: graph_api_client.py  obo_token_exchanger.py  token_extractor.py
docs/use-cases/sharepoint-list-to-quicksight-dataset/backend/tests/: conftest.py
docs/use-cases/sharepoint-list-to-quicksight-dataset/backend/tests/unit/activities/: test_export_list_activity.py  test_list_lists_activity.py  test_search_sites_activity.py
docs/use-cases/sharepoint-list-to-quicksight-dataset/backend/tests/unit/common/dao/: test_s3_dao.py
docs/use-cases/sharepoint-list-to-quicksight-dataset/backend/tests/unit/common/services/: test_graph_api_client.py
docs/use-cases/sharepoint-list-to-quicksight-dataset/backend/tests/unit/handlers/: test_api_handler.py
(+49 files in other folders)
