[project]
name = "quick-sharepoint-list-export"
version = "0.1.0"
description = "Export SharePoint lists to Amazon S3 as CSV files with Quick Sight manifests, via an Amazon Quick OpenAPI plugin"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pydantic>=2.0,<3",
    "boto3>=1.0,<2",
    "aws-lambda-powertools>=3.0,<4",
    "aws-xray-sdk>=2.0,<3",
    "httpx>=0.28,<1",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=6.0,<7",
    "ruff>=0.8,<1",
    "mypy>=1.0,<2",
    "moto[s3]>=5.0,<6",
    "python-dotenv>=1.0,<2",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
sources = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
